[gd_scene load_steps=8 format=2]

[ext_resource path="res://ReusableUI/AbilityDetail/AbilityDetail.gd" type="Script" id=1]
[ext_resource path="res://AssettsImage/AbilityIcons/defend.png" type="Texture" id=2]
[ext_resource path="res://AssettsImage/Interface/red-square.png" type="Texture" id=3]
[ext_resource path="res://AssettsImage/Interface/square.png" type="Texture" id=4]
[ext_resource path="res://AssettsImage/Interface/black-square.png" type="Texture" id=5]
[ext_resource path="res://Assetts3.0/OtherUI/Equinox16Px.tres" type="DynamicFont" id=6]
[ext_resource path="res://Assetts3.0/OtherUI/EquinoxSmall.tres" type="DynamicFont" id=7]

[node name="AbilityDetail" type="Panel"]
margin_right = 384.0
margin_bottom = 256.0
rect_min_size = Vector2( 0, 256 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleRow" type="Panel" parent="."]
self_modulate = Color( 0.968627, 0.592157, 0.992157, 1 )
anchor_right = 1.0
anchor_bottom = 0.25
rect_min_size = Vector2( 0, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbilityIcon" type="TextureRect" parent="TitleRow"]
margin_left = 8.0
margin_top = 8.0
margin_right = 72.0
margin_bottom = 72.0
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TitleRow"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 8.0
margin_right = -9.0
margin_bottom = -8.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 6 )
text = "{ABILITY_TITLE}"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ValidRow" type="HBoxContainer" parent="."]
anchor_top = 0.276
anchor_right = 1.0
anchor_bottom = 0.483
margin_left = 8.0
margin_top = 7.96799
margin_right = -8.0
margin_bottom = -8.056
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="PlayerBack" type="TextureRect" parent="ValidRow"]
margin_right = 45.0
margin_bottom = 36.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
texture = ExtResource( 3 )
stretch_mode = 4

[node name="PlayerMid" type="TextureRect" parent="ValidRow"]
margin_left = 53.0
margin_right = 99.0
margin_bottom = 36.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
texture = ExtResource( 3 )
stretch_mode = 4

[node name="PlayerFront" type="TextureRect" parent="ValidRow"]
margin_left = 107.0
margin_right = 153.0
margin_bottom = 36.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
texture = ExtResource( 3 )
stretch_mode = 4

[node name="Container" type="Container" parent="ValidRow"]
margin_left = 161.0
margin_right = 206.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EnemyFront" type="TextureRect" parent="ValidRow"]
margin_left = 214.0
margin_right = 260.0
margin_bottom = 36.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
texture = ExtResource( 3 )
stretch_mode = 4

[node name="EnemyMid" type="TextureRect" parent="ValidRow"]
margin_left = 268.0
margin_right = 314.0
margin_bottom = 36.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
texture = ExtResource( 3 )
stretch_mode = 4

[node name="EnemyBack" type="TextureRect" parent="ValidRow"]
margin_left = 322.0
margin_right = 368.0
margin_bottom = 36.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
texture = ExtResource( 3 )
stretch_mode = 4

[node name="TextRow" type="HBoxContainer" parent="."]
anchor_left = 0.021
anchor_top = 0.483
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.0640011
margin_top = -0.0559998
margin_right = -8.0
margin_bottom = -8.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="TextRow"]
margin_right = 144.0
margin_bottom = 124.0
size_flags_horizontal = 3
custom_fonts/normal_font = ExtResource( 7 )
tab_size = 3
text = "BUNCH OF TEXT"

[node name="VBox" type="VBoxContainer" parent="TextRow"]
margin_left = 152.0
margin_right = 216.0
margin_bottom = 124.0

[node name="TSpacer" type="Control" parent="TextRow/VBox"]
margin_right = 64.0
margin_bottom = 22.0
size_flags_vertical = 3

[node name="AreaGrid" type="GridContainer" parent="TextRow/VBox"]
margin_top = 30.0
margin_right = 64.0
margin_bottom = 94.0
columns = 3

[node name="0_0" type="TextureRect" parent="TextRow/VBox/AreaGrid"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 5 )

[node name="0_1" type="TextureRect" parent="TextRow/VBox/AreaGrid"]
margin_left = 24.0
margin_right = 40.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 4 )

[node name="0_2" type="TextureRect" parent="TextRow/VBox/AreaGrid"]
margin_left = 48.0
margin_right = 64.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 5 )

[node name="1_0" type="TextureRect" parent="TextRow/VBox/AreaGrid"]
margin_top = 24.0
margin_right = 16.0
margin_bottom = 40.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 4 )

[node name="1_1" type="TextureRect" parent="TextRow/VBox/AreaGrid"]
margin_left = 24.0
margin_top = 24.0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 4 )

[node name="1_2" type="TextureRect" parent="TextRow/VBox/AreaGrid"]
margin_left = 48.0
margin_top = 24.0
margin_right = 64.0
margin_bottom = 40.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 4 )

[node name="2_0" type="TextureRect" parent="TextRow/VBox/AreaGrid"]
margin_top = 48.0
margin_right = 16.0
margin_bottom = 64.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 5 )

[node name="2_1" type="TextureRect" parent="TextRow/VBox/AreaGrid"]
margin_left = 24.0
margin_top = 48.0
margin_right = 40.0
margin_bottom = 64.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 4 )

[node name="2_2" type="TextureRect" parent="TextRow/VBox/AreaGrid"]
margin_left = 48.0
margin_top = 48.0
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 5 )

[node name="BSpacer" type="Control" parent="TextRow/VBox"]
margin_top = 102.0
margin_right = 64.0
margin_bottom = 124.0
size_flags_vertical = 3

[node name="Data" type="RichTextLabel" parent="TextRow"]
margin_left = 224.0
margin_right = 368.0
margin_bottom = 124.0
size_flags_horizontal = 3
custom_fonts/normal_font = ExtResource( 7 )
text = "Other bunch of text"
